--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         </plugins>
     </build>
 
+    <!-- junit test-->
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
